Issue #2896182 by maikelkoopman: improve layout of post create block on mobile

--- a/themes/socialbase/components/04-organisms/comment/comment.scss
+++ b/themes/socialbase/components/04-organisms/comment/comment.scss
@@ -141,6 +141,10 @@
     }
   }
 
+  textarea.form-control {
+    height: $input-height-base;
+  }
+
 
 }
 
